@@ -1,5 +1,11 @@
 2008-10-22  Christian Persch  <chpe@gnome.org>
 
+	* defaults/gconf-defaults.c: (do_copy),
+	(gconf_defaults_unset_mandatory): Fix some 'format not a string
+	literal and no format arguments' warnings.
+
+2008-10-22  Christian Persch  <chpe@gnome.org>
+
 	* gconf/gconf-backend.c: (gconf_backend_unref): Fix one 'format not a
 	string literal and no format arguments' warning.
 
